@@ -3,7 +3,6 @@ package stirling.software.SPDF.config.security;
 import java.io.IOException;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.context.annotation.Lazy;
@@ -99,7 +98,7 @@ public class UserAuthenticationFilter extends OncePerRequestFilter {
                                             authority ->
                                                     new SimpleGrantedAuthority(
                                                             authority.getAuthority()))
-                                    .collect(Collectors.toList());
+                                    .toList();
                     authentication = new ApiKeyAuthenticationToken(user.get(), apiKey, authorities);
                     SecurityContextHolder.getContext().setAuthentication(authentication);
                 } catch (AuthenticationException e) {
