@@ -11,7 +11,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
-import java.util.stream.Collectors;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipInputStream;
 
@@ -168,7 +167,7 @@ public class PipelineProcessor {
                                             file ->
                                                     finalinputFileTypes.stream()
                                                             .anyMatch(file.getFilename()::endsWith))
-                                    .collect(Collectors.toList());
+                                    .toList();
                 }
                 // Check if there are matching files
                 if (!matchingFiles.isEmpty()) {
